--- a/layouts/shortcodes/iframe.html
+++ b/layouts/shortcodes/iframe.html
@@ -3,6 +3,6 @@
 	width="{{ .Get "width" }}"
 	height="{{ .Get "height" }}"
 	frameborder="0"
-	class="giphy-embed"
+	class="center"
 	allowfullscreen
 ></iframe>
